@@ -11,6 +11,7 @@ import vn.backend.backend.repository.BalanceRepository;
 import vn.backend.backend.repository.ExpenseParticipantRepository;
 import vn.backend.backend.repository.GroupRepository;
 import vn.backend.backend.repository.UserRepository;
+import vn.backend.backend.repository.GroupMembersRepository;
 import vn.backend.backend.controller.response.BalanceResponse;
 import vn.backend.backend.service.BalanceService;
 
@@ -25,6 +26,7 @@ public class BalanceServiceImpl implements BalanceService {
     private final BalanceRepository balanceRepository;
     private final GroupRepository groupRepository;
     private final UserRepository userRepository;
+    private final GroupMembersRepository groupMembersRepository;
     private final ExpenseParticipantRepository expenseParticipantRepository;
 
     @Override
@@ -227,6 +229,70 @@ public class BalanceServiceImpl implements BalanceService {
                 .build();
     }
 
+
+    public boolean checkGroupNetDebt(Long groupId) {
+        // === Bước 1: Lấy tất cả các quan hệ nợ của nhóm ===
+        List<BalanceEntity> balances = balanceRepository.findAllByGroupGroupId(groupId);
+
+        // Nếu không có quan hệ nợ nào, thì chắc chắn là đã hết nợ
+        if (balances.isEmpty()) {
+            return false; // Không còn nợ
+        }
+
+        // === Bước 2: Tính toán Net Balance cho từng thành viên ===
+        Map<Long, BigDecimal> netBalances = groupMembersRepository.findAllById_GroupId(groupId)
+                .stream()
+                .collect(Collectors.toMap(
+                        gm -> gm.getId().getUserId(),
+                        gm -> BigDecimal.ZERO
+                ));
+
+
+        // Duyệt qua từng bản ghi balance để cộng/trừ vào netBalance
+        for (BalanceEntity balance : balances) {
+            Long user1Id = balance.getUser1().getUserId();
+            Long user2Id = balance.getUser2().getUserId();
+            BigDecimal amount = balance.getBalance();
+
+            // Cập nhật cho user1
+            netBalances.put(user1Id,
+                    netBalances.get(user1Id).add(amount));
+
+            // Cập nhật cho user2
+            netBalances.put(user2Id,
+                    netBalances.get(user2Id).subtract(amount));
+        }
+
+        // === Bước 3: Kiểm tra xem có ai có Net Balance khác 0 không ===
+        final BigDecimal TOLERANCE = new BigDecimal("0.01");
+
+        boolean hasDebt = netBalances.values().stream()
+                .anyMatch(netBalance -> netBalance.abs().compareTo(TOLERANCE) > 0);
+
+        return hasDebt;
+    }
+    @Override
+    @Transactional // Quan trọng: Đảm bảo tất cả các cập nhật đều thành công
+    public void settleGroupDebts(Long groupId) {
+        // 1. Kiểm tra xem nhóm có thực sự hết nợ ròng không
+        //    Hàm này trả về 'true' nếu CÒN NỢ, 'false' nếu HẾT NỢ
+        boolean stillHasNetDebt = checkGroupNetDebt(groupId);
+
+        if (stillHasNetDebt) {
+            // Nếu vẫn còn nợ ròng, không cho phép tất toán
+            throw new IllegalStateException("Không thể tất toán. " +
+                    "Vẫn còn số dư ròng chưa thanh toán trong nhóm.");
+        }
+
+        // 2. Nếu đã hết nợ ròng (tất cả mọi người = 0),
+        //    tiến hành "dọn dẹp" tất cả các bản ghi BalanceEntity về 0.
+        balanceRepository.setAllBalancesToZeroByGroupId(groupId);
+
+        // (Bạn cũng có thể thêm logic khác ở đây,
+        //  ví dụ: đánh dấu nhóm là "archived" (đã lưu trữ))
+    }
+
+
     // =========================================================================
     // ==        THUẬT TOÁN TỐI ƯU HÓA NỢ BẰNG MAX-FLOW (EDMONDS-KARP)       ==
     // =========================================================================
@@ -239,12 +305,17 @@ public class BalanceServiceImpl implements BalanceService {
      * - flow: lưu lượng hiện tại đang chảy qua cạnh
      * - reverse: tham chiếu đến cạnh ngược (cần thiết cho thuật toán max-flow)
      */
+    // --- CONSTANTS ---
+    private static final Long SOURCE = -1L;
+    private static final Long SINK = -2L;
+    private static final BigDecimal INF = new BigDecimal("1000000000"); // ∞
+
+    // --- EDGE & GRAPH (đã được cải tiến) ---
     private static class Edge {
-        final Long from;        // userId nguồn
-        final Long to;          // userId đích
-        BigDecimal capacity;    // Dung lượng còn lại của cạnh (số tiền tối đa có thể chuyển)
-        BigDecimal flow = BigDecimal.ZERO;  // Lưu lượng hiện tại
-        Edge reverse;           // Cạnh ngược (quan trọng cho thuật toán Edmonds-Karp)
+        final Long from, to;
+        BigDecimal capacity;
+        BigDecimal flow = BigDecimal.ZERO;
+        Edge reverse;
 
         Edge(Long from, Long to, BigDecimal capacity) {
             this.from = from;
@@ -252,17 +323,10 @@ public class BalanceServiceImpl implements BalanceService {
             this.capacity = capacity;
         }
 
-        /**
-         * Tính dung lượng còn lại của cạnh (capacity - flow)
-         */
         BigDecimal remaining() {
             return capacity.subtract(flow);
         }
 
-        /**
-         * Thêm lưu lượng vào cạnh này và trừ lưu lượng ở cạnh ngược
-         * Đây là bước quan trọng trong thuật toán Edmonds-Karp
-         */
         void addFlow(BigDecimal delta) {
             this.flow = this.flow.add(delta);
             this.reverse.flow = this.reverse.flow.subtract(delta);
@@ -275,90 +339,43 @@ public class BalanceServiceImpl implements BalanceService {
      * Triển khai thuật toán Edmonds-Karp (BFS-based max flow) với BigDecimal
      */
     private static class FlowGraph {
-        final Map<Long, List<Edge>> adj = new HashMap<>();  // Danh sách kề
-        final Set<Long> nodes = new HashSet<>();            // Tập các node (userId)
+        final Map<Long, List<Edge>> adj = new HashMap<>();
+        final Set<Long> nodes = new HashSet<>();
 
-        /**
-         * Thêm một cạnh có hướng từ u đến v với dung lượng cap
-         * Đồng thời tạo cạnh ngược với dung lượng 0 (cần thiết cho max-flow)
-         */
         void addEdge(Long u, Long v, BigDecimal cap) {
             nodes.add(u);
             nodes.add(v);
             adj.putIfAbsent(u, new ArrayList<>());
             adj.putIfAbsent(v, new ArrayList<>());
 
-            // Tạo cạnh thuận (forward edge) với capacity = cap
-            Edge f = new Edge(u, v, cap);
-            // Tạo cạnh ngược (reverse edge) với capacity = 0
-            Edge r = new Edge(v, u, BigDecimal.ZERO);
+            // Kiểm tra trùng cạnh
+            for (Edge e : adj.get(u)) {
+                if (e.to.equals(v)) {
+                    e.capacity = e.capacity.add(cap);
+                    return;
+                }
+            }
 
-            // Liên kết 2 cạnh với nhau
+            Edge f = new Edge(u, v, cap);
+            Edge r = new Edge(v, u, BigDecimal.ZERO);
             f.reverse = r;
             r.reverse = f;
-
             adj.get(u).add(f);
             adj.get(v).add(r);
         }
 
-        /**
-         * Tạo bản sao của FlowGraph
-         * Chỉ copy các cạnh thuận (forward edges) có capacity > 0
-         * Điều này đảm bảo cấu trúc đồ thị giống nhau và tránh duplicate cạnh ngược
-         */
-        static FlowGraph copyFrom(FlowGraph other) {
-            FlowGraph g = new FlowGraph();
-
-            // Copy tất cả các nodes
-            for (Long n : other.nodes) {
-                g.nodes.add(n);
-                g.adj.putIfAbsent(n, new ArrayList<>());
-            }
-
-            // Copy các cạnh thuận (chỉ những cạnh có capacity > 0)
-            for (Map.Entry<Long, List<Edge>> e : other.adj.entrySet()) {
-                for (Edge edge : e.getValue()) {
-                    // Chỉ copy cạnh thuận để tránh duplicate cạnh ngược
-                    if (edge.capacity.compareTo(BigDecimal.ZERO) > 0) {
-                        g.addEdge(edge.from, edge.to, edge.capacity);
-                    }
-                }
-            }
-            return g;
-        }
-
-        /**
-         * Thuật toán Edmonds-Karp: tìm max flow từ source đến sink
-         *
-         * Ý tưởng:
-         * 1. Sử dụng BFS để tìm đường đi ngắn nhất từ source đến sink
-         * 2. Tìm bottleneck (giá trị nhỏ nhất) trên đường đi đó
-         * 3. Tăng flow trên đường đi bằng bottleneck
-         * 4. Lặp lại cho đến khi không còn đường đi nào
-         *
-         * @param source userId nguồn
-         * @param sink userId đích
-         * @return Tổng lưu lượng tối đa từ source đến sink
-         */
         BigDecimal maxFlow(Long source, Long sink) {
             BigDecimal total = BigDecimal.ZERO;
 
             while (true) {
-                // BƯỚC 1: Sử dụng BFS để tìm augmenting path (đường tăng luồng)
-                Map<Long, Edge> parent = new HashMap<>();  // Lưu cạnh dẫn đến mỗi node
+                Map<Long, Edge> parent = new HashMap<>();
                 Queue<Long> q = new LinkedList<>();
                 q.add(source);
-                Set<Long> seen = new HashSet<>();
-                seen.add(source);
+                Set<Long> seen = new HashSet<>(Set.of(source));
 
-                // BFS
-                while (!q.isEmpty()) {
+                while (!q.isEmpty() && !seen.contains(sink)) {
                     Long u = q.poll();
-                    if (u.equals(sink)) break;  // Đã đến đích
-
-                    // Duyệt các cạnh kề
-                    for (Edge e : adj.getOrDefault(u, Collections.emptyList())) {
-                        // Chỉ đi qua cạnh chưa thăm và còn dung lượng
+                    for (Edge e : adj.getOrDefault(u, List.of())) {
                         if (!seen.contains(e.to) && e.remaining().compareTo(BigDecimal.ZERO) > 0) {
                             parent.put(e.to, e);
                             seen.add(e.to);
@@ -367,23 +384,13 @@ public class BalanceServiceImpl implements BalanceService {
                     }
                 }
 
-                // Nếu không tìm được đường đi từ source đến sink -> dừng
                 if (!parent.containsKey(sink)) break;
 
-                // BƯỚC 2: Tìm bottleneck (dung lượng nhỏ nhất trên đường đi)
-                BigDecimal bottleneck = null;
+                BigDecimal bottleneck = INF;
                 for (Long v = sink; !v.equals(source); v = parent.get(v).from) {
-                    Edge e = parent.get(v);
-                    if (bottleneck == null) {
-                        bottleneck = e.remaining();
-                    } else {
-                        bottleneck = bottleneck.min(e.remaining());
-                    }
+                    bottleneck = bottleneck.min(parent.get(v).remaining());
                 }
 
-                if (bottleneck == null) break;
-
-                // BƯỚC 3: Tăng flow trên đường đi bằng bottleneck
                 for (Long v = sink; !v.equals(source); v = parent.get(v).from) {
                     parent.get(v).addFlow(bottleneck);
                 }
@@ -421,30 +428,26 @@ public class BalanceServiceImpl implements BalanceService {
      * @param balances Danh sách balance entities (bao gồm cả balance = 0)
      * @return FlowGraph đại diện cho mạng nợ
      */
-    private FlowGraph buildGraphFromBalances(List<BalanceEntity> balances) {
+    private FlowGraph buildOptimizationGraph(List<BalanceEntity> balances, Map<Long, BigDecimal> netBalance) {
         FlowGraph g = new FlowGraph();
 
+        // 1. Thêm cạnh từ SOURCE / đến SINK
+        for (Map.Entry<Long, BigDecimal> e : netBalance.entrySet()) {
+            Long user = e.getKey();
+            BigDecimal amount = e.getValue();
+            if (amount.compareTo(BigDecimal.ZERO) > 0) {
+                g.addEdge(SOURCE, user, amount);
+            } else if (amount.compareTo(BigDecimal.ZERO) < 0) {
+                g.addEdge(user, SINK, amount.abs());
+            }
+        }
+
+        // 2. Thêm cạnh 2 chiều giữa các cặp đã từng có nợ (capacity = INF)
         for (BalanceEntity b : balances) {
             Long u1 = b.getUser1().getUserId();
             Long u2 = b.getUser2().getUserId();
-
-            // Thêm cả 2 user vào đồ thị (để đảm bảo node tồn tại)
-            g.nodes.add(u1);
-            g.nodes.add(u2);
-
-            if (b.getBalance().compareTo(BigDecimal.ZERO) > 0) {
-                // balance > 0: user1 nợ user2
-                g.addEdge(u1, u2, b.getBalance());
-            } else if (b.getBalance().compareTo(BigDecimal.ZERO) < 0) {
-                // balance < 0: user2 nợ user1
-                g.addEdge(u2, u1, b.getBalance().abs());
-            } else {
-                // balance = 0: Tạo cạnh 2 chiều với capacity = 0
-                // Mục đích: cho phép thuật toán tìm đường đi qua cặp này nếu cần
-                // (vì đây là cặp đã từng có quan hệ nợ)
-                g.addEdge(u1, u2, BigDecimal.ZERO);
-                g.addEdge(u2, u1, BigDecimal.ZERO);
-            }
+            g.addEdge(u1, u2, INF);
+            g.addEdge(u2, u1, INF); // addEdge đã chống trùng
         }
 
         return g;
@@ -478,130 +481,81 @@ public class BalanceServiceImpl implements BalanceService {
      */
     @Override
     public BalanceResponse getSimplifiedUserBalanceResponse(Long groupId, Long userId) {
-        // Validate group và user
+        // === 1. Validate ===
         var group = groupRepository.findById(groupId)
                 .orElseThrow(() -> new NoSuchElementException("Group not found with id " + groupId));
         var requestingUser = userRepository.findById(userId)
                 .orElseThrow(() -> new NoSuchElementException("User not found with id " + userId));
 
-        // Lấy tất cả balance trong nhóm
         List<BalanceEntity> allBalances = balanceRepository.findAllByGroupGroupId(groupId);
+        if (allBalances.isEmpty()) {
+            return BalanceResponse.builder()
+                    .userId(userId)
+                    .userName(requestingUser.getFullName())
+                    .groupId(groupId)
+                    .groupName(group.getGroupName())
+                    .balances(Collections.emptyList())
+                    .build();
+        }
 
-        // Xây dựng đồ thị flow ban đầu
-        FlowGraph mainGraph = buildGraphFromBalances(allBalances);
+        // === 2. Tính net balance cho mỗi user ===
+        Map<Long, BigDecimal> netBalance = new HashMap<>();
+        for (BalanceEntity b : allBalances) {
+            netBalance.merge(b.getUser1().getUserId(), b.getBalance(), BigDecimal::add);
+            netBalance.merge(b.getUser2().getUserId(), b.getBalance().negate(), BigDecimal::add);
+        }
 
-        // Tạo map lưu tên user để hiển thị
+        // === 3. Lấy tên user ===
         Map<Long, String> userNames = new HashMap<>();
         for (BalanceEntity b : allBalances) {
             userNames.put(b.getUser1().getUserId(), b.getUser1().getFullName());
             userNames.put(b.getUser2().getUserId(), b.getUser2().getFullName());
         }
 
-        // Thu thập tất cả các cạnh thuận ban đầu (snapshot)
-        List<Debt> initialEdges = new ArrayList<>();
-        for (Map.Entry<Long, List<Edge>> e : mainGraph.adj.entrySet()) {
-            for (Edge edge : e.getValue()) {
-                // Chỉ lấy các cạnh thuận (capacity > 0)
-                if (edge.capacity.compareTo(BigDecimal.ZERO) >= 0) {
-                    initialEdges.add(new Debt(edge.from, edge.to, edge.capacity));
+        // === 4. Xây dựng đồ thị tối ưu với Super-Source & Super-Sink ===
+        FlowGraph graph = buildOptimizationGraph(allBalances, netBalance);
+
+        // === 5. Chạy Max-Flow ===
+        BigDecimal totalFlow = graph.maxFlow(SOURCE, SINK);
+
+        // === 6. Lấy các giao dịch từ flow > 0 (không tính SOURCE/SINK) ===
+        List<Debt> transactions = new ArrayList<>();
+        for (Map.Entry<Long, List<Edge>> entry : graph.adj.entrySet()) {
+            Long from = entry.getKey();
+            if (from.equals(SOURCE) || from.equals(SINK)) continue;
+
+            for (Edge edge : entry.getValue()) {
+                if (edge.to.equals(SOURCE) || edge.to.equals(SINK)) continue;
+                if (edge.flow.compareTo(BigDecimal.ZERO) > 0) {
+                    transactions.add(new Debt(from, edge.to, edge.flow));
                 }
             }
         }
 
-        // XỬ LÝ TỪ TỪNG CẠNH: Tìm đường đi gián tiếp để tối ưu
-        for (Debt edge : initialEdges) {
-            Long u = edge.from();
-            Long v = edge.to();
-
-            // Tạo bản sao đồ thị, loại bỏ cạnh trực tiếp u->v
-            // Mục đích: buộc thuật toán phải tìm đường đi qua các node khác
-            FlowGraph temp = FlowGraph.copyFrom(mainGraph);
-
-            // Đặt capacity của cạnh trực tiếp u->v = 0 trong temp graph
-            List<Edge> edgesFromU = temp.adj.getOrDefault(u, Collections.emptyList());
-            for (Edge e : edgesFromU) {
-                if (e.to.equals(v)) {
-                    e.capacity = BigDecimal.ZERO;
-                    break;
-                }
-            }
-
-            // Tính max flow từ u đến v (qua các đường gián tiếp)
-            BigDecimal flowFound = temp.maxFlow(u, v);
-            if (flowFound.compareTo(BigDecimal.ZERO) <= 0) continue;  // Không tìm được đường nào
-
-            // Trừ flow đã dùng khỏi các cạnh trung gian trong mainGraph
-            for (Map.Entry<Long, List<Edge>> ent : temp.adj.entrySet()) {
-                for (Edge usedEdge : ent.getValue()) {
-                    // Chỉ xét các cạnh thuận đã được sử dụng (flow > 0)
-                    if (usedEdge.flow.compareTo(BigDecimal.ZERO) > 0) {
-                        // Tìm cạnh tương ứng trong mainGraph
-                        Edge corresponding = mainGraph.adj.getOrDefault(usedEdge.from, Collections.emptyList())
-                                .stream()
-                                .filter(e2 -> e2.to.equals(usedEdge.to))
-                                .findFirst()
-                                .orElse(null);
-
-                        if (corresponding != null) {
-                            // Giảm capacity của cạnh trung gian
-                            corresponding.capacity = corresponding.capacity.subtract(usedEdge.flow);
-                        }
-                    }
-                }
-            }
-
-            // Tăng capacity của cạnh trực tiếp u->v trong mainGraph
-            Edge directEdge = mainGraph.adj.getOrDefault(u, Collections.emptyList())
-                    .stream()
-                    .filter(e2 -> e2.to.equals(v))
-                    .findFirst()
-                    .orElse(null);
-
-            if (directEdge != null) {
-                directEdge.capacity = directEdge.capacity.add(flowFound);
-            } else {
-                // Trường hợp defensive (không nên xảy ra)
-                mainGraph.addEdge(u, v, flowFound);
-            }
-        }
-
-        // Thu thập các khoản nợ sau khi tối ưu (chỉ các cạnh có capacity > 0)
-        List<Debt> simplified = new ArrayList<>();
-        for (Map.Entry<Long, List<Edge>> e : mainGraph.adj.entrySet()) {
-            for (Edge edge : e.getValue()) {
-                if (edge.capacity.compareTo(BigDecimal.ZERO) > 0) {
-                    simplified.add(new Debt(edge.from, edge.to, edge.capacity));
-                }
-            }
-        }
-
-        // Xây dựng response chỉ cho user yêu cầu
-        List<BalanceResponse.UserBalanceDetail> details = simplified.stream()
-                // Lọc các khoản nợ > 0 (làm tròn 2 chữ số)
-                .filter(d -> d.amount().setScale(2, RoundingMode.HALF_UP).compareTo(BigDecimal.ZERO) > 0)
-                // Chỉ lấy các khoản liên quan đến userId
+        // === 7. Lọc chỉ các khoản liên quan đến userId ===
+        List<BalanceResponse.UserBalanceDetail> details = transactions.stream()
                 .filter(d -> d.from().equals(userId) || d.to().equals(userId))
                 .map(d -> {
-                    if (d.from().equals(userId)) {
-                        // User đang nợ người khác
-                        return BalanceResponse.UserBalanceDetail.builder()
-                                .userId(d.to())
-                                .userName(userNames.get(d.to()))
-                                .amount(d.amount())
-                                .isOwed(false)  // User phải trả nợ
-                                .build();
-                    } else {
-                        // Người khác đang nợ user
-                        return BalanceResponse.UserBalanceDetail.builder()
-                                .userId(d.from())
-                                .userName(userNames.get(d.from()))
-                                .amount(d.amount())
-                                .isOwed(true)  // User được nhận tiền
-                                .build();
-                    }
+                    boolean isOwed = d.to().equals(userId); // userId được nhận
+                    Long otherId = isOwed ? d.from() : d.to();
+                    String otherName = userNames.getOrDefault(otherId, "Unknown");
+                    BigDecimal amount = d.amount().setScale(2, RoundingMode.HALF_UP);
+
+                    return BalanceResponse.UserBalanceDetail.builder()
+                            .userId(otherId)
+                            .userName(otherName)
+                            .amount(amount)
+                            .isOwed(isOwed)
+                            .build();
                 })
+//                .sorted((a, b) -> {
+//                    int cmp = a.isOwed() == b.isOwed() ? 0 : (a.isOwed() ? 1 : -1);
+//                    if (cmp != 0) return cmp;
+//                    return a.userName().compareToIgnoreCase(b.userName());
+//                })
                 .collect(Collectors.toList());
 
+        // === 8. Trả về ===
         return BalanceResponse.builder()
                 .userId(requestingUser.getUserId())
                 .userName(requestingUser.getFullName())
@@ -609,7 +563,9 @@ public class BalanceServiceImpl implements BalanceService {
                 .groupName(group.getGroupName())
                 .balances(details)
                 .build();
-    }@Override
+    }
+
+    @Override
     @Transactional
     public void updateBalancesForPayment(PaymentEntity payment) {
         Long payerId = payment.getPayer().getUserId();
